--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,19 @@
             <version>2.3.3</version>
         </dependency>
 
+        <!-- 11.4 add-->
+        <!-- WebSocket -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+        <!-- FastJSON（用于WebSocket消息序列化） -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.32</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
